syntax = "proto3";

option csharp_namespace = "RemoteDesktop.Grpc.Service.Genrated";

package Rdc;

// The wave service definition.
service ControlRemoteComputer {
    // Sends a greeting
    rpc Subscribe (SubscribeRequest) returns (SubscribeRespose);
    rpc ResolveAvailableRemoteComputers(AvailableRemoteComputersRequest) returns (AvailableRemoteComputersResponse);
    rpc StatusQuery(QueryRequest) returns (QueryRespose);
    rpc Connect(ConnectRequest) returns (ConnectRespose);
}

// The request message containing the user's name.
message SubscribeRequest {
    RemoteClient client = 1;
}

// The response message containing the greetings.
message SubscribeRespose {
  string subscribe_id =1;
}

// The request message containing the user's name.
message QueryRequest {
  string subscribe_id = 1;
}

// The request message containing the user's name.
message QueryRespose { 
    string subscribe_id = 1;
}

// The request message containing the user's name.
message ConnectRequest {
  string subscribe_id = 1;
  string request_id =2;
}

// The request message containing the user's name.
message ConnectRespose {
    string request_id = 1;
    string terminal_id = 2;
    string terminal_name = 3;
    string terminal_passward = 4;
}

// The request message containing the request id.
message AvailableRemoteComputersRequest{
    string request_id = 1;
}

message AvailableRemoteComputersResponse{
    string request_id = 1;
    repeated RemoteComputer remote_computer_list = 2;
}

message RemoteComputer {
    string computer_name = 1;
    string ip_address = 2;
    string current_user = 4;
}

message RemoteClient {
    string user_name = 1;
    string last_name = 2;
    string first_name = 3;
    string email_address = 4;
}
